# christianwhocodes

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  pyproject.toml
.github/docs/: uv_publish.md
.github/workflows/: uv_publish.yaml
src/christianwhocodes/: cli.py
src/christianwhocodes/commands/: __init__.py  base.py  copy.py  delete.py  random.py
src/christianwhocodes/generators/: file.py  random.py
src/christianwhocodes/io/: console.py  filesystem.py
src/christianwhocodes/utils/: config.py  converters.py  platform.py  strings.py  version.py
