[project.urls]
Homepage = "https://github.com/treeolivetech/pkg-christianwhocodes"
# Documentation = "https://github.com/treeolivetech/pkg-christianwhocodes#readme"
# Repository = "https://github.com/treeolivetech/pkg-christianwhocodes"
Issues = "https://github.com/treeolivetech/pkg-christianwhocodes/issues"

[project]
name = "christianwhocodes"
version = "1.5.4.dev2"
description = "Utilities for developers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Treeolive Technologies", email = "hi@treeolive.tech" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
scripts = { christianwhocodes = "christianwhocodes.cli:main" }
dependencies = ["pyperclip==1.11.0", "rich==14.3.3"]

[dependency-groups]
dev = ["ruff>=0.15.7", "ty>=0.0.24"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 130
lint = { select = ["D"], ignore = ["D203", "D213"] }
format = { skip-magic-trailing-comma = true, docstring-code-format = true }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
