[project.urls]
Homepage = "https://github.com/treeolivetech/pkg-christianwhocodes"
Documentation = "https://github.com/treeolivetech/pkg-christianwhocodes#readme"
Repository = "https://github.com/treeolivetech/pkg-christianwhocodes"
Issues = "https://github.com/treeolivetech/pkg-christianwhocodes/issues"

[project]
name = "christianwhocodes"
version = "1.5.8"
description = "Utilities for developers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pyperclip==1.11.0", "rich==15.0.0"]

[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"
cwc = "christianwhocodes.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff]
lint = { select = ["D"], ignore = ["D203", "D213"] }
format = { docstring-code-format = true }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
